<resources>
    <string name="app_name">Projeto2Bimestre</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="name">Nome</string>
    <string name="cadastro">Cadastro:</string>
    <string name="legenda">Legenda</string>
    <string name="criar_post">Criar Post</string>
</resources>